cli/tests/e2e/snapshots/test_config_resolver/test_new_feature_registry_config/output.txt
METRICS: Using configs from the Registry (like --config=p/ci) reports pseudonymous rule metrics to semgrep.dev.
To disable Registry rule metrics, use "--metrics=off".
Using configs only from local files (like --config=xyz.yml) does not enable metrics.

More information: https://semgrep.dev/docs/metrics

Fetching rules from https://semgrep.dev/registry.

Rules downloaded from https://semgrep.dev/p/ci failed to parse.
This is likely because rules have been added that use functionality introduced in later versions of semgrep.
Please upgrade to latest version of semgrep (see https://semgrep.dev/docs/upgrading/) and try again.

semgrep error: Invalid rule schema
  --> https://semgrep.dev/...:1
1 | https://semgrep.dev/p/ci
  | ^^^^^^^^^^^^^^^^^^^^^^^^

'https://semgrep.dev/p/ci' is not of type 'object'

[ERROR] invalid configuration file found (1 configs were invalid)
